parser.output
Terminals unused in grammar

   EXPR


State 24 conflicts: 1 shift/reduce


Grammar

    0 $accept: program_start $end

    1 $@1: %empty

    2 program_start: $@1 program

    3 program: program_parts
    4        | program_parts program

    5 program_parts: class_def_decleration
    6              | func_proc
    7              | var_dcl

    8 class_def_decleration: CLASS ID SEMI_COLON
    9                      | class_dcl

   10 class_dcl: CLASS ID polymorphic_opt OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON
   11          | CLASS ID OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON

   12 polymorphic_opt: INHERITS COLON ID COMMA polymorphic_opt
   13                | INHERITS COLON ID

   14 class_body: %empty
   15           | spec_on_class var_dcl class_body
   16           | spec_on_class func_dcl class_body

   17 spec_on_class: access_level
   18              | access_level STATIC

   19 func_proc: func_dcl
   20          | proc_dcl

   21 func_dcl: type ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS SEMI_COLON
   22         | type ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS block

   23 argument: type ID array_dcl
   24         | type ID array_dcl COMMA argument

   25 arguments: %empty
   26          | argument

   27 array_dcl: %empty
   28          | OPENING_BRACE CLOSING_BRACE array_dcl

   29 proc_dcl: PROCEDURE ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS SEMI_COLON
   30         | PROCEDURE ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS block

   31 access_level: PUBLIC
   32             | PRIVATE

   33 type: INT
   34     | BOOL
   35     | FLOAT
   36     | LONG
   37     | CHAR
   38     | DOUBLE
   39     | ID
   40     | STRING
   41     | VOID
   42     | AUTO

   43 $@2: %empty

   44 var_dcl: CONST type $@2 var_dcl_cnts SEMI_COLON

   45 $@3: %empty

   46 var_dcl: type $@3 var_dcl_cnts SEMI_COLON

   47 var_dcl_cnts: var_dcl_cnt
   48             | var_dcl_cnt COMMA var_dcl_cnts

   49 var_dcl_cnt: variable
   50            | assignment

   51 block: OPENING_CURLY_BRACE run_content CLOSING_CURLY_BRACE

   52 run_content: %empty
   53            | var_dcl run_content
   54            | statement run_content

   55 statement: assignment SEMI_COLON
   56          | expr SEMI_COLON
   57          | cond_stmt
   58          | loop_stmt
   59          | RETURN SEMI_COLON
   60          | RETURN expr SEMI_COLON
   61          | goto SEMI_COLON
   62          | label
   63          | BREAK SEMI_COLON
   64          | CONTINUE SEMI_COLON
   65          | DESTRUCT array_dcl ID SEMI_COLON
   66          | SIZEOF OPENING_PARENTHESIS type CLOSING_PARENTHESIS SEMI_COLON

   67 $@4: %empty

   68 assignment: variable ASSIGNMENT $@4 expr

   69 $@5: %empty

   70 assignment: variable ASSIGNMENT $@5 NEW

   71 method_call: ID OPENING_PARENTHESIS parameters CLOSING_PARENTHESIS
   72            | ID OPENING_PARENTHESIS CLOSING_PARENTHESIS
   73            | ID DOT method_call

   74 parameters: variable
   75           | variable COMMA parameters

   76 cond_stmt: IF OPENING_PARENTHESIS expr closing_paranthes block

   77 $@6: %empty

   78 cond_stmt: IF OPENING_PARENTHESIS expr closing_paranthes block ELSE $@6 block
   79          | SWITCH OPENING_PARENTHESIS ID CLOSING_PARENTHESIS OF COLON OPENING_CURLY_BRACE cases DEFAULT COLON block CLOSING_CURLY_BRACE

   80 closing_paranthes: CLOSING_PARENTHESIS

   81 cases: %empty
   82      | CASE INTEGER_CONST COLON block cases

   83 $@7: %empty

   84 $@8: %empty

   85 loop_stmt: FOR OPENING_PARENTHESIS var_dcl $@7 expr $@8 SEMI_COLON expr_assign CLOSING_PARENTHESIS block

   86 $@9: %empty

   87 $@10: %empty

   88 loop_stmt: FOR OPENING_PARENTHESIS $@9 SEMI_COLON expr $@10 SEMI_COLON expr_assign CLOSING_PARENTHESIS block

   89 $@11: %empty

   90 $@12: %empty

   91 loop_stmt: REPEAT $@11 block UNTIL OPENING_PARENTHESIS expr $@12 CLOSING_PARENTHESIS SEMI_COLON
   92          | FOREACH OPENING_PARENTHESIS ID IN ID CLOSING_PARENTHESIS block

   93 expr_assign: expr

   94 goto: GOTO ID

   95 label: ID COLON

   96 expr: expr ADD expr
   97     | expr SUB_AND_UNARY_MINUS expr
   98     | expr PRODUCTION expr
   99     | expr DIV expr
  100     | expr MOD expr
  101     | expr LOGICAL_AND expr
  102     | expr ARITHMATIC_AND expr
  103     | expr ARITHMATIC_OR expr
  104     | expr LOGICAL_OR expr
  105     | expr LOGICAL_OR_ARITHMATIC_XOR expr
  106     | expr EQUAL expr
  107     | expr NOT_EQUAL expr
  108     | expr BIGGER_OR_EQUAL expr
  109     | expr BIGGER_THAN expr
  110     | expr LESS_OR_EQUAL expr
  111     | expr LESS_THAN expr
  112     | OPENING_PARENTHESIS expr CLOSING_PARENTHESIS
  113     | unary_op variable
  114     | variable unary_op
  115     | variable
  116     | method_call
  117     | const_val
  118     | NOT expr
  119     | SUB_AND_UNARY_MINUS expr

  120 unary_op: INCREMENT
  121         | DECREMENT

  122 variable: ID
  123         | ID DOT variable
  124         | ID array_use
  125         | ID array_use DOT variable

  126 array_use: OPENING_BRACE expr CLOSING_BRACE array_use
  127          | OPENING_BRACE expr CLOSING_BRACE

  128 const_val: INTEGER_CONST
  129          | REAL_CONST
  130          | CHARACTER_CONST
  131          | BOOLEAN_CONST
  132          | STRING_CONST
  133          | LONG_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
EQUAL (258) 106
NOT_EQUAL (259) 107
LESS_OR_EQUAL (260) 110
LESS_THAN (261) 111
BIGGER_THAN (262) 109
BIGGER_OR_EQUAL (263) 108
ASSIGNMENT (264) 68 70
NOT (265) 118
ARITHMATIC_AND (266) 102
LOGICAL_AND (267) 101
ARITHMATIC_OR (268) 103
LOGICAL_OR (269) 104
LOGICAL_OR_ARITHMATIC_XOR (270) 105
PRODUCTION (271) 98
ADD (272) 96
INCREMENT (273) 120
DECREMENT (274) 121
SUB_AND_UNARY_MINUS (275) 97 119
DIV (276) 99
MOD (277) 100
OPENING_CURLY_BRACE (278) 10 11 51 79
CLOSING_CURLY_BRACE (279) 10 11 51 79
OPENING_PARENTHESIS (280) 21 22 29 30 66 71 72 76 78 79 85 88 91 92
    112
CLOSING_PARENTHESIS (281) 21 22 29 30 66 71 72 79 80 85 88 91 92 112
DOT (282) 73 123 125
COMMA (283) 12 24 48 75
COLON (284) 12 13 79 82 95
SEMI_COLON (285) 8 10 11 21 29 44 46 55 56 59 60 61 63 64 65 66 85
    88 91
OPENING_BRACE (286) 28 126 127
CLOSING_BRACE (287) 28 126 127
BOOLEAN_CONST (288) 131
INTEGER_CONST (289) 82 128
LONG_CONST (290) 133
REAL_CONST (291) 129
CHARACTER_CONST (292) 130
STRING_CONST (293) 132
ID (294) 8 10 11 12 13 21 22 23 24 29 30 39 65 71 72 73 79 92 94 95
    122 123 124 125
AUTO (295) 42
BOOL (296) 34
BREAK (297) 63
CASE (298) 82
CHAR (299) 37
CLASS (300) 8 10 11
CONST (301) 44
CONTINUE (302) 64
DEFAULT (303) 79
DESTRUCT (304) 65
DOUBLE (305) 38
ELSE (306) 78
FLOAT (307) 35
FOR (308) 85 88
FOREACH (309) 92
GOTO (310) 94
IF (311) 76 78
IN (312) 92
INT (313) 33
LONG (314) 36
NEW (315) 70
PRIVATE (316) 32
PROCEDURE (317) 29 30
PUBLIC (318) 31
REPEAT (319) 91
RETURN (320) 59 60
SIZEOF (321) 66
STATIC (322) 18
STRING (323) 40
SWITCH (324) 79
UNTIL (325) 91
VOID (326) 41
INHERITS (327) 12 13
OF (328) 79
EXPR (329)
UNARY_MINUS (330)
LOWER_THAN_ELSE (331)


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
program_start (78)
    on left: 2, on right: 0
$@1 (79)
    on left: 1, on right: 2
program (80)
    on left: 3 4, on right: 2 4
program_parts (81)
    on left: 5 6 7, on right: 3 4
class_def_decleration (82)
    on left: 8 9, on right: 5
class_dcl (83)
    on left: 10 11, on right: 9
polymorphic_opt (84)
    on left: 12 13, on right: 10 12
class_body (85)
    on left: 14 15 16, on right: 10 11 15 16
spec_on_class (86)
    on left: 17 18, on right: 15 16
func_proc (87)
    on left: 19 20, on right: 6
func_dcl (88)
    on left: 21 22, on right: 16 19
argument (89)
    on left: 23 24, on right: 24 26
arguments (90)
    on left: 25 26, on right: 21 22 29 30
array_dcl (91)
    on left: 27 28, on right: 23 24 28 65
proc_dcl (92)
    on left: 29 30, on right: 20
access_level (93)
    on left: 31 32, on right: 17 18
type (94)
    on left: 33 34 35 36 37 38 39 40 41 42, on right: 21 22 23 24 44
    46 66
var_dcl (95)
    on left: 44 46, on right: 7 15 53 85
$@2 (96)
    on left: 43, on right: 44
$@3 (97)
    on left: 45, on right: 46
var_dcl_cnts (98)
    on left: 47 48, on right: 44 46 48
var_dcl_cnt (99)
    on left: 49 50, on right: 47 48
block (100)
    on left: 51, on right: 22 30 76 78 79 82 85 88 91 92
run_content (101)
    on left: 52 53 54, on right: 51 53 54
statement (102)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66, on right: 54
assignment (103)
    on left: 68 70, on right: 50 55
$@4 (104)
    on left: 67, on right: 68
$@5 (105)
    on left: 69, on right: 70
method_call (106)
    on left: 71 72 73, on right: 73 116
parameters (107)
    on left: 74 75, on right: 71 75
cond_stmt (108)
    on left: 76 78 79, on right: 57
$@6 (109)
    on left: 77, on right: 78
closing_paranthes (110)
    on left: 80, on right: 76 78
cases (111)
    on left: 81 82, on right: 79 82
loop_stmt (112)
    on left: 85 88 91 92, on right: 58
$@7 (113)
    on left: 83, on right: 85
$@8 (114)
    on left: 84, on right: 85
$@9 (115)
    on left: 86, on right: 88
$@10 (116)
    on left: 87, on right: 88
$@11 (117)
    on left: 89, on right: 91
$@12 (118)
    on left: 90, on right: 91
expr_assign (119)
    on left: 93, on right: 85 88
goto (120)
    on left: 94, on right: 61
label (121)
    on left: 95, on right: 62
expr (122)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 113 114 115 116 117 118 119, on right: 56 60 68 76 78 85
    88 91 93 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111 112 118 119 126 127
unary_op (123)
    on left: 120 121, on right: 113 114
variable (124)
    on left: 122 123 124 125, on right: 49 68 70 74 75 113 114 115
    123 125
array_use (125)
    on left: 126 127, on right: 124 125 126
const_val (126)
    on left: 128 129 130 131 132 133, on right: 117


State 0

    0 $accept: . program_start $end

    $default  reduce using rule 1 ($@1)

    program_start  go to state 1
    $@1            go to state 2


State 1

    0 $accept: program_start . $end

    $end  shift, and go to state 3


State 2

    2 program_start: $@1 . program

    ID         shift, and go to state 4
    AUTO       shift, and go to state 5
    BOOL       shift, and go to state 6
    CHAR       shift, and go to state 7
    CLASS      shift, and go to state 8
    CONST      shift, and go to state 9
    DOUBLE     shift, and go to state 10
    FLOAT      shift, and go to state 11
    INT        shift, and go to state 12
    LONG       shift, and go to state 13
    PROCEDURE  shift, and go to state 14
    STRING     shift, and go to state 15
    VOID       shift, and go to state 16

    program                go to state 17
    program_parts          go to state 18
    class_def_decleration  go to state 19
    class_dcl              go to state 20
    func_proc              go to state 21
    func_dcl               go to state 22
    proc_dcl               go to state 23
    type                   go to state 24
    var_dcl                go to state 25


State 3

    0 $accept: program_start $end .

    $default  accept


State 4

   39 type: ID .

    $default  reduce using rule 39 (type)


State 5

   42 type: AUTO .

    $default  reduce using rule 42 (type)


State 6

   34 type: BOOL .

    $default  reduce using rule 34 (type)


State 7

   37 type: CHAR .

    $default  reduce using rule 37 (type)


State 8

    8 class_def_decleration: CLASS . ID SEMI_COLON
   10 class_dcl: CLASS . ID polymorphic_opt OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON
   11          | CLASS . ID OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON

    ID  shift, and go to state 26


State 9

   44 var_dcl: CONST . type $@2 var_dcl_cnts SEMI_COLON

    ID      shift, and go to state 4
    AUTO    shift, and go to state 5
    BOOL    shift, and go to state 6
    CHAR    shift, and go to state 7
    DOUBLE  shift, and go to state 10
    FLOAT   shift, and go to state 11
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    STRING  shift, and go to state 15
    VOID    shift, and go to state 16

    type  go to state 27


State 10

   38 type: DOUBLE .

    $default  reduce using rule 38 (type)


State 11

   35 type: FLOAT .

    $default  reduce using rule 35 (type)


State 12

   33 type: INT .

    $default  reduce using rule 33 (type)


State 13

   36 type: LONG .

    $default  reduce using rule 36 (type)


State 14

   29 proc_dcl: PROCEDURE . ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS SEMI_COLON
   30         | PROCEDURE . ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS block

    ID  shift, and go to state 28


State 15

   40 type: STRING .

    $default  reduce using rule 40 (type)


State 16

   41 type: VOID .

    $default  reduce using rule 41 (type)


State 17

    2 program_start: $@1 program .

    $default  reduce using rule 2 (program_start)


State 18

    3 program: program_parts .
    4        | program_parts . program

    ID         shift, and go to state 4
    AUTO       shift, and go to state 5
    BOOL       shift, and go to state 6
    CHAR       shift, and go to state 7
    CLASS      shift, and go to state 8
    CONST      shift, and go to state 9
    DOUBLE     shift, and go to state 10
    FLOAT      shift, and go to state 11
    INT        shift, and go to state 12
    LONG       shift, and go to state 13
    PROCEDURE  shift, and go to state 14
    STRING     shift, and go to state 15
    VOID       shift, and go to state 16

    $default  reduce using rule 3 (program)

    program                go to state 29
    program_parts          go to state 18
    class_def_decleration  go to state 19
    class_dcl              go to state 20
    func_proc              go to state 21
    func_dcl               go to state 22
    proc_dcl               go to state 23
    type                   go to state 24
    var_dcl                go to state 25


State 19

    5 program_parts: class_def_decleration .

    $default  reduce using rule 5 (program_parts)


State 20

    9 class_def_decleration: class_dcl .

    $default  reduce using rule 9 (class_def_decleration)


State 21

    6 program_parts: func_proc .

    $default  reduce using rule 6 (program_parts)


State 22

   19 func_proc: func_dcl .

    $default  reduce using rule 19 (func_proc)


State 23

   20 func_proc: proc_dcl .

    $default  reduce using rule 20 (func_proc)


State 24

   21 func_dcl: type . ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS SEMI_COLON
   22         | type . ID OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS block
   46 var_dcl: type . $@3 var_dcl_cnts SEMI_COLON

    ID  shift, and go to state 30

    ID  [reduce using rule 45 ($@3)]

    $@3  go to state 31


State 25

    7 program_parts: var_dcl .

    $default  reduce using rule 7 (program_parts)


State 26

    8 class_def_decleration: CLASS ID . SEMI_COLON
   10 class_dcl: CLASS ID . polymorphic_opt OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON
   11          | CLASS ID . OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON

    OPENING_CURLY_BRACE  shift, and go to state 32
    SEMI_COLON           shift, and go to state 33
    INHERITS             shift, and go to state 34

    polymorphic_opt  go to state 35


State 27

   44 var_dcl: CONST type . $@2 var_dcl_cnts SEMI_COLON

    $default  reduce using rule 43 ($@2)

    $@2  go to state 36


State 28

   29 proc_dcl: PROCEDURE ID . OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS SEMI_COLON
   30         | PROCEDURE ID . OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS block

    OPENING_PARENTHESIS  shift, and go to state 37


State 29

    4 program: program_parts program .

    $default  reduce using rule 4 (program)


State 30

   21 func_dcl: type ID . OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS SEMI_COLON
   22         | type ID . OPENING_PARENTHESIS arguments CLOSING_PARENTHESIS block

    OPENING_PARENTHESIS  shift, and go to state 38


State 31

   46 var_dcl: type $@3 . var_dcl_cnts SEMI_COLON

    ID  shift, and go to state 39

    var_dcl_cnts  go to state 40
    var_dcl_cnt   go to state 41
    assignment    go to state 42
    variable      go to state 43


State 32

   11 class_dcl: CLASS ID OPENING_CURLY_BRACE . class_body CLOSING_CURLY_BRACE SEMI_COLON

    PRIVATE  shift, and go to state 44
    PUBLIC   shift, and go to state 45

    $default  reduce using rule 14 (class_body)

    class_body     go to state 46
    spec_on_class  go to state 47
    access_level   go to state 48


State 33

    8 class_def_decleration: CLASS ID SEMI_COLON .

    $default  reduce using rule 8 (class_def_decleration)


State 34

   12 polymorphic_opt: INHERITS . COLON ID COMMA polymorphic_opt
   13                | INHERITS . COLON ID

    COLON  shift, and go to state 49


State 35

   10 class_dcl: CLASS ID polymorphic_opt . OPENING_CURLY_BRACE class_body CLOSING_CURLY_BRACE SEMI_COLON

    OPENING_CURLY_BRACE  shift, and go to state 50


State 36

   44 var_dcl: CONST type $@2 . var_dcl_cnts SEMI_COLON

    ID  shift, and go to state 39

    var_dcl_cnts  go to state 51
    var_dcl_cnt   go to state 41
    assignment    go to state 42
    variable      go to state 43


State 37

   29 proc_dcl: PROCEDURE ID OPENING_PARENTHESIS . arguments CLOSING_PARENTHESIS SEMI_COLON
   30         | PROCEDURE ID OPENING_PARENTHESIS . arguments CLOSING_PARENTHESIS block

    ID      shift, and go to state 4
    AUTO    shift, and go to state 5
    BOOL    shift, and go to state 6
    CHAR    shift, and go to state 7
    DOUBLE  shift, and go to state 10
    FLOAT   shift, and go to state 11
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    STRING  shift, and go to state 15
    VOID    shift, and go to state 16

    $default  reduce using rule 25 (arguments)

    argument   go to state 52
    arguments  go to state 53
    type       go to state 54


State 38

   21 func_dcl: type ID OPENING_PARENTHESIS . arguments CLOSING_PARENTHESIS SEMI_COLON
   22         | type ID OPENING_PARENTHESIS . arguments CLOSING_PARENTHESIS block

    ID      shift, and go to state 4
    AUTO    shift, and go to state 5
    BOOL    shift, and go to state 6
    CHAR    shift, and go to state 7
    DOUBLE  shift, and go to state 10
    FLOAT   shift, and go to state 11
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    STRING  shift, and go to state 15
    VOID    shift, and go to state 16

    $default  reduce using rule 25 (arguments)

    argument   go to state 52
    arguments  go to state 55
    type       go to state 54


State 39

  122 variable: ID .
  123         | ID . DOT variable
  124         | ID . array_use
  125         | ID . array_use DOT variable

    DOT            shift, and go to state 56
    OPENING_BRACE  shift, and go to state 57

    $default  reduce using rule 122 (variable)

    array_use  go to state 58


State 40

   46 var_dcl: type $@3 var_dcl_cnts . SEMI_COLON

    SEMI_COLON  shift, and go to state 59


State 41

   47 var_dcl_cnts: var_dcl_cnt .
   48             | var_dcl_cnt . COMMA var_dcl_cnts

    COMMA  shift, and go to state 60

    $default  reduce using rule 47 (var_dcl_cnts)


State 42

   50 var_dcl_cnt: assignment .

    $default  reduce using rule 50 (var_dcl_cnt)


State 43

   49 var_dcl_cnt: variable .
   68 assignment: variable . ASSIGNMENT $@4 expr
   70           | variable . ASSIGNMENT $@5 NEW

    ASSIGNMENT  shift, and go to state 61

    $default  reduce using rule 49 (var_dcl_cnt)


State 44

   32 access_level: PRIVATE .

    $default  reduce using rule 32 (access_level)


State 45

   31 access_level: PUBLIC .

    $default  reduce using rule 31 (access_level)


State 46

   11 class_dcl: CLASS ID OPENING_CURLY_BRACE class_body . CLOSING_CURLY_BRACE SEMI_COLON

    CLOSING_CURLY_BRACE  shift, and go to state 62


State 47

   15 class_body: spec_on_class . var_dcl class_body
   16           | spec_on_class . func_dcl class_body

    ID      shift, and go to state 4
    AUTO    shift, and go to state 5
    BOOL    shift, and go to state 6
    CHAR    shift, and go to state 7
    CONST   shift, and go to state 9
    DOUBLE  shift, and go to state 10
    FLOAT   shift, and go to state 11
    INT     shift, and go to state 12
    LONG    shift, and go to state 13
    STRING  shift, and go to state 15
    VOID    shift, and go to state 16

    func_dcl  go to state 63
    type      go to state 24
    var_dcl   go to state 64


State 48

   17 spec_on_class: access_level .
   18              | access_level . STATIC

    STATIC  shift, and go to state 65

    $default  reduce using rule 17 (spec_on_class)


State 49

   12 polymorphic_opt: INHERITS COLON . ID COMMA polymorphic_opt
   13                | INHERITS COLON . ID

    ID  shift, and go to state 66


State 50

   10 class_dcl: CLASS ID polymorphic_opt OPENING_CURLY_BRACE . class_body CLOSING_CURLY_BRACE SEMI_COLON

    PRIVATE  shift, and go to state 44
    PUBLIC   shift, and go to state 45

    $default  reduce using rule 14 (class_body)

    class_body     go to state 67
    spec_on_class  go to state 47
    access_level   go to state 48


State 51

   44 var_dcl: CONST type $@2 var_dcl_cnts . SEMI_COLON

    SEMI_COLON  shift, and go to state 68


State 52

   26 arguments: argument .

    $default  reduce using rule 26 (arguments)


State 53

   29 proc_dcl: PROCEDURE ID OPENING_PARENTHESIS arguments . CLOSING_PARENTHESIS SEMI_COLON
   30         | PROCEDURE ID OPENING_PARENTHESIS arguments . CLOSING_PARENTHESIS block

    CLOSING_PARENTHESIS  shift, and go to state 69


State 54

   23 argument: type . ID array_dcl
   24         | type . ID array_dcl COMMA argument

    ID  shift, and go to state 70


State 55

   21 func_dcl: type ID OPENING_PARENTHESIS arguments . CLOSING_PARENTHESIS SEMI_COLON
   22         | type ID OPENING_PARENTHESIS arguments . CLOSING_PARENTHESIS block

    CLOSING_PARENTHESIS  shift, and go to state 71


State 56

  123 variable: ID DOT . variable

    ID  shift, and go to state 39

    variable  go to state 72


State 57
